--- a/src/home-module/sample14/Sample14.module.css
+++ b/src/home-module/sample14/Sample14.module.css
@@ -1,17 +1,78 @@
-.container {
-    position: relative; /* This becomes the reference for absolute children. The space it originally occupied is still reserved in the document */
-    top: 20px; /*The .container will move 20px down and 30px right from where it would normally be.*/
-    left: 30px;
-    width: 300px;
-    height: 300px;
-    background-color: lightgray;
+.auth-inputs {
+    width: 100%;
+    max-width: 28rem;
+    padding: 2rem;
+    margin: 0 auto;
+    border-radius: 0.5rem;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+    background: linear-gradient(180deg, #474232 0%, #28271c 100%);
+    color: white;
 }
 
-.box {
-    position: absolute; /*.box will not take up space in the normal flow.. If .container did not have position: relative, then .box would position itself relative to the entire page (or nearest positioned ancestor).*/
-    top: 50px; /*It will be placed 50px down and 50px right relative to .container.*/
-    left: 50px;
-    background-color: lightblue;
-    width: 100px;
-    height: 100px;
+.controls {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    margin-bottom: 1.5rem;
+}
+
+.controls label {
+    display: block;
+    margin-bottom: 0.5rem;
+    font-size: 0.75rem;
+    font-weight: 700;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+    color: #6b7280;
+}
+
+.controls input {
+    width: 100%;
+    padding: 0.75rem 1rem;
+    line-height: 1.5;
+    background-color: #d1d5db;
+    color: #374151;
+    border: 1px solid transparent;
+    border-radius: 0.25rem;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+}
+
+label.invalid {
+    color: #f87171;
+}
+
+input.invalid {
+    color: #ef4444;
+    border-color: #f73f3f;
+    background-color: #fed2d2;
+}
+
+.actions {
+    display: flex;
+    justify-content: flex-end;
+    gap: 1rem;
+}
+
+.button {
+    padding: 1rem 2rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    border-radius: 0.25rem;
+    color: #1f2937;
+    background-color: #f0b322;
+    border-radius: 6px;
+    border: none;
+}
+
+.button:hover {
+    background-color: #f0920e;
+}
+
+.text-button {
+    color: #f0b322;
+    border: none;
+}
+
+.text-button:hover {
+    color: #f0920e;
 }
