--- a/src/elegantContextModule/components/Shop.module.css
+++ b/src/elegantContextModule/components/Shop.module.css
@@ -8,3 +8,12 @@
     color: #a59b8b;
     text-transform: uppercase;
 }
+
+.products {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+    gap: 2rem;
+}
