--- a/src/elegantContextModule/pages/ElegantContextHomePage.module.css
+++ b/src/elegantContextModule/pages/ElegantContextHomePage.module.css
@@ -1,10 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&family=Merriweather:wght@400;700&display=swap');
 
-* {
+.ec-home-page * {
     box-sizing: border-box;
 }
 
-body {
+.ec-home-page {
     margin: 0;
     font-family: 'Merriweather', serif;
     -webkit-font-smoothing: antialiased;
@@ -14,100 +13,6 @@ body {
     min-height: 100vh;
 }
 
-#main-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 3rem 15%;
-}
-
-#main-title {
-    display: flex;
-    align-items: center;
-}
-
-#main-title img {
-    width: 5rem;
-    margin-right: 1.5rem;
-}
-
-h1 {
-    text-align: center;
-    text-transform: uppercase;
-    color: #edbf68;
-    text-shadow: 0 0 4px rgba(35, 34, 34, 0.4);
-    font-size: 2.5rem;
-    margin: 0;
-}
-
-#main-header button {
-    background: #edbf68;
-    border: none;
-    border-radius: 5px;
-    padding: 0.5rem 1.5rem;
-    color: #201e1a;
-    font-size: 1.25rem;
-    cursor: pointer;
-}
-
-#main-header button:hover {
-    background: #f5b744;
-}
-
-
-#modal {
-    width: 30%;
-    background: #d3b17b;
-    border: none;
-    border-radius: 6px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    animation: fade-slide-in-from-top 0.3s ease-in-out;
-}
-
-#modal::backdrop {
-    background: rgba(0, 0, 0, 0.65);
-}
-
-#modal h2 {
-    font-size: 1.5rem;
-    color: #4f3807;
-    text-transform: uppercase;
-    margin: 0;
-}
-
-#modal form {
-    display: flex;
-    gap: 1rem;
-    justify-content: flex-end;
-    align-items: center;
-}
-
-#modal form button {
-    background: transparent;
-    border: none;
-    border-radius: 5px;
-    color: #201e1a;
-    cursor: pointer;
-    font-size: 1.1rem;
-}
-
-#modal form button:hover {
-    color: #453719;
-}
-
-#modal form button:last-of-type {
-    background: #271e07;
-    border: none;
-    border-radius: 5px;
-    padding: 0.5rem 1rem;
-    color: #f9efda;
-    font-size: 1rem;
-    cursor: pointer;
-}
-
-#modal form button:last-of-type:hover {
-    background: #382e1b;
-}
 
 #checkout {
     animation: fade-slide-in-from-right 0.3s ease-in-out;
